--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: A basic workflow
 on:
   push:
     branches: ["main"]
-  pull:
+  pull_request:
     branches: ["main"]
   workflow_dispatch:
 
