--- a/.github/workflows/list_default_github_env_vars.yaml
+++ b/.github/workflows/list_default_github_env_vars.yaml
@@ -15,6 +15,28 @@ jobs:
     steps:
       - run: env
 
-
+  windows-environment-variables:
+     runs-on: windows-latest
+     steps:
+        #print all environment variables
+        - run: echo $env:GITHUB_WORKFLOW
+        - run: echo $env:GITHUB_ACTION  
+        - run: echo $env:GITHUB_ACTOR
+        - run: echo $env:GITHUB_REPOSITORY
+        - run: echo $env:GITHUB_EVENT_NAME
+        - run: echo $env:GITHUB_EVENT_PATH
+        - run: echo $env:GITHUB_WORKSPACE
+        - run: echo $env:GITHUB_SHA
+        - run: echo $env:GITHUB_REF
+        - run: echo $env:GITHUB_HEAD_REF
+        - run: echo $env:GITHUB_BASE_REF
+        - run: echo $env:GITHUB_SERVER_URL
+        - run: echo $env:GITHUB_API_URL
+        - run: echo $env:GITHUB_GRAPHQL_URL
+        - run: echo $env:GITHUB_REPOSITORY_OWNER
+        - run: echo $env:GITHUB_REPOSITORY_NAME
+        - run: echo $env:GITHUB_RUN_ID
+        - run: echo $env:GITHUB_RUN_NUMBER
+        - run: echo $env:GITHUB_ACTION_REPOSITORY
+        - run: echo $env:GITHUB_ACTION_REF
   
-      
