--- a/.github/workflows/Artifacts.yaml
+++ b/.github/workflows/Artifacts.yaml
@@ -16,6 +16,7 @@ jobs:
   job_2:
     name: download artifact
     runs-on: ubuntu-latest
+    needs: job_1
     steps:
       - name: "download artifact"
         uses: actions/download-artifact@v2
