adding passing values to jobs yaml

--- a/.github/workflows/passing_values_to_jobs.yaml
+++ b/.github/workflows/passing_values_to_jobs.yaml
@@ -5,8 +5,8 @@ jobs:
   job1:
     runs-on: ubuntu-latest
     outputs:
-      output1: ${{ steps.step1.ioutputs.test}}
-      output2: ${{ steps.step1.ioutputs.test2}}
+      output1: ${{ steps.step1.outputs.test}}
+      output2: ${{ steps.step1.outputs.test2}}
     steps:
       - name: step1
         id: step1
